무비포스트 작성 페이지 수정페이지
무비포스트 수정 페이지와
무비포스트 작성 페이지 디자인 수정

무비포스트 작성 페이지 다시선택 구현 취소 구현 완료

--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/movieDetail.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/movieDetail.css
@@ -235,6 +235,19 @@ overflow: hidden;
     vertical-align: center;
     float: left;
 }
+.sawMovie{
+    position: absolute;
+    right: 0;
+}
+
+.sawMovie>button{
+width: 105px;
+height: 36px;
+border-radius: 5px;
+background-color: transparent;
+border: 1px solid #432e75;
+cursor: pointer;
+}
 
 .reviewAllCountWrap{
     width: 1100px;
