--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostFrm.css
@@ -19,9 +19,19 @@
     font-size: 28px;
 }
 .postSubRight>button{
+    border: 1px solid #503396;
+    background-color: #fff;
+    border-radius: 5px;
     width: 110px;
     height: 36px;
 }
+
+.postSubRight:hover>button{
+    background-color: #503396;
+    color: #fff;
+    font-weight: bold;
+}
+
 .moviePostSideAll{
     width: 1100px;
     margin-top: 20px;
@@ -53,8 +63,8 @@
    
    
 }
-.postLeftSideContent>.tab>a button{
-    background-color: transparent;
+.postLeftSideContent>.LeftSideContentBtn>a button{
+    background-color: #503396;
     color: #fff;
     padding-bottom: 5px;
     border-style: none;
@@ -128,14 +138,31 @@ padding-bottom: 20px;
 .moviePostBottomBtn{
     text-align: center;
     margin-top: 50px;
+    margin-bottom:200px;
 }
 .moviePostBottomBtn div{
     display: inline-block;
 }
 .moviePostBottomBtn button{
+    border:1px solid #503396;
+    color: black;
+    border-radius: 5px;
+    background-color: #fff;
     width: 86px;
     height: 46px;
 }
+
+.moviePostBottomBtn>.moviePostEnrollBtn:hover button{
+    color: #fff;
+    background-color: #503396;
+    font-weight: bold;
+}
+.moviePostBottomBtn>.moviePostCancelBtn:hover button{
+    color: #fff;
+    background-color: #503396;
+    font-weight: bold;
+}
+
 .moviePostBottomBtn>.moviePostEnrollBtn{
     margin-right: 20px;
 
@@ -144,4 +171,3 @@ padding-bottom: 20px;
     margin-top: 50px;
 
 }
-
