--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostUpdateFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostUpdateFrm.css
@@ -18,10 +18,21 @@
 .postSubLeft{
     font-size: 28px;
 }
+
 .postSubRight>button{
+    border: 1px solid #503396;
+    background-color: #fff;
+    border-radius: 5px;
     width: 110px;
     height: 36px;
 }
+
+.postSubRight:hover>button{
+    background-color: #503396;
+    color: #fff;
+    font-weight: bold;
+}
+
 .moviePostSideAll{
     width: 1100px;
     margin-top: 20px;
@@ -53,14 +64,15 @@
    
    
 }
-.postLeftSideContent>.tab>a button{
-    background-color: transparent;
+.postLeftSideContent>.LeftSideContentBtn>a button{
+    background-color: #503396;
     color: #fff;
     padding-bottom: 5px;
     border-style: none;
     border-bottom: 1px solid #fff;
     cursor: pointer;
 }
+
 .moviePostRightSide{
     width: 530px;
     height: 650px;
@@ -124,7 +136,7 @@ padding-bottom: 20px;
     box-sizing: border-box;
 
 }
-
+/*===================================================*/
 .moviePostBottomBtn{
     text-align: center;
     margin-top: 50px;
@@ -133,6 +145,10 @@ padding-bottom: 20px;
     display: inline-block;
 }
 .moviePostBottomBtn button{
+    border:1px solid #503396;
+    color: black;
+    border-radius: 5px;
+    background-color: #fff;
     width: 86px;
     height: 46px;
 }
@@ -145,3 +161,13 @@ padding-bottom: 20px;
 
 }
 
+.moviePostBottomBtn>.moviePostEnrollBtn:hover button{
+    color: #fff;
+    background-color: #503396;
+    font-weight: bold;
+}
+.moviePostBottomBtn>.moviePostCancelBtn:hover button{
+    color: #fff;
+    background-color: #503396;
+    font-weight: bold;
+}
