--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
@@ -51,7 +51,7 @@ a { color: #000; }
 .head-title h2 { font-size: 1.2rem; }
 
 /* images */
-.product-control { display: flex; margin-top: 30px; border-bottom: 1px solid #d8d9db; }
+.product-control { display: flex; margin: 30px 0 100px; border-bottom: 1px solid #d8d9db; padding-bottom: 100px; }
 .product-control .images { text-align: center; }
 .images { width: 480px; }
 #selected-image { width: 100%; }
@@ -81,7 +81,7 @@ a { color: #000; }
 .price button { background: none; height: 20px; width: 20px; background: url("/resources/images/gift/x-mark.png") 0 0 no-repeat;  background-size:  cover; text-indent: -9999px; cursor: pointer; border: none; }
 
 /* btn 구매하기 / 좋아요 / 장바구니 */
-.product-btn-box  { display: flex; justify-content: space-between; align-items: center; width: 450px; }
+.product-btn-box  { display: flex; justify-content: space-between; align-items: center; width: 450px; margin-top: 30px; }
 .product-btn-box button { height: 60px; margin: 0px 1.5px; padding: 0; box-sizing: border-box; background: #fdfdfd; flex-grow: 1; }
 .product-btn-box button:first-of-type { flex-grow: 3; background-color: #000; border: none; color: #fff; }
 .product-btn-box button:first-of-type:hover { background-color: #333; border: none; color: #fff; }
@@ -95,6 +95,13 @@ a { color: #000; }
 .quantity { height: 28px; display: flex; align-items: center; justify-content: space-around; width: 100px; border-radius: 5px; border: 1px solid #ccc; }
 .quantity input { border: none; background-color: transparent; width: 25%; padding-left: 15px; font-size: 1.2rem; font-weight: 600; }
 .quantity button { background-color: transparent; border: none; cursor: pointer; font-size: 1.5rem; font-weight: bold; }
+
+
+/* 상세 메인콘텐츠영역 */
+.main-content { width: 960px; margin: 0 auto; }
+.main-img-container img { max-width: 960px; margin: 10px 0; }
+
+
 
 /* 주문서 결제 페이지 */
 .order { min-height: 500px; } 
@@ -164,3 +171,14 @@ a { color: #000; }
 /* 결제 */
 #takeOrder { width: 300px; height: 50px; display: block; background-color: #503396; color: #FFF; border: none; margin: 50px auto; }
 #takeOrder:hover { cursor: pointer; }
+
+/* 결제완료결과 */
+.pay-result-main { width: 800px; margin: 100px auto 0; text-align: center; padding: 50px; }
+.pay-result-main .order-number { color: #999; }
+.order-number a { text-decoration: underline; }
+.pay-result-main h1 { font-size: 2rem; height: 80px; line-height: 80px; }
+/* 결제완료 버튼 */
+.complete-btns { display: flex; justify-content: center; align-items: center; margin-bottom: 100px; }
+.complete-btns a { display: block; width: 220px; border: 1px solid #000; text-align: center; height: 60px; line-height: 60px; font-size: 1rem; font-weight: 600; } 
+.complete-btns a:first-of-type { margin-right: 30px; }
+.complete-btns a:last-of-type { color: #FFF; background-color: #503396; }
