--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
@@ -74,3 +74,7 @@
 .sub-menu>li:hover>a{
 	 color: #008040;
 }
+#last-li{
+	border-bottom : 1px solid #c0c0c0;
+	border-radius : 15px 15px 15px 15px;
+}
