--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/myProfile.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/myProfile.css
@@ -21,7 +21,6 @@
 .mypage-wrap{
 	margin: 0 auto;
     padding-top: 80px;
-    position: absolute;
     left: 450px;
 }
 
@@ -243,6 +242,7 @@ sup{
 }
 
 .btn-wrap{
+	margin-left: 400px;
 	margin-top: 30px;
 	margin-bottom: 30px;
 	text-align: center;
